# whitelist-hook-program

./: Anchor.toml  README.md
programs/permit-hook/: Cargo.toml
programs/permit-hook/src/: consts.rs  errors.rs  events.rs  lib.rs  states.rs
programs/permit-hook/src/instructions/: check_hook.rs  finalize_proposal.rs  initialize.rs  mod.rs  propose_hook.rs  vote_hook.rs
tests/: permit-hook.ts
